# dirac-setuptools-tests

./: .gitignore  LICENSE  README.md  build-and-upload-to-pypi-test.sh  clean-builds-and-pypi.sh
DIRAC/: setup.cfg
DIRAC/src/DIRAC/: __init__.py  scripts.py
ILCDIRAC/: setup.cfg
ILCDIRAC/src/ILCDIRAC/: __init__.py  scripts.py
LHCbDIRAC/: setup.cfg
LHCbDIRAC/src/LHCbDIRAC/: __init__.py  scripts.py
LHCbWebDIRAC/: setup.cfg  setup.py
LHCbWebDIRAC/src/LHCbWebDIRAC/: __init__.py
VMDIRAC/: setup.cfg
VMDIRAC/src/VMDIRAC/: __init__.py
WebAppDIRAC/: setup.cfg
WebAppDIRAC/src/WebAppDIRAC/: __init__.py
