[metadata]
name = DIRAC
version = attr: DIRAC.__version__
description = DIRAC is an interware, meaning a software framework for distributed computing.
long_description = file: README.rst, CHANGELOG.rst
license = GPL-3.0-only
classifiers =
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
python_requires = >=3.8
package_dir=
    =src
packages = find:
install_requires =
    m2crypto
    simplejson

[options.packages.find]
where=src

[options.extras_require]
server =
    boto3
    matplotlib
    sqlalchemy
    tornado

[options.entry_points]
console_scripts =
    dirac-proxy-info = DIRAC.scripts:proxy_info
    dirac-dms-get-file = DIRAC.scripts:dms_get_file
    dirac-show-extensions = DIRAC.scripts:show_extensions
dirac =
    metadata = DIRAC:extension_metadata
