[metadata]
name = ILCDIRAC
version = attr: ILCDIRAC.__version__
description = The Dirac Extension for the linear collider related detector studies in the ILC VO
long_description = file: README.rst, CHANGELOG.rst
license = GPL-3.0-only
classifiers =
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
python_requires = >=3.8
package_dir=
    =src
packages = find:
install_requires =
    DIRAC ~=8.0.0

[options.packages.find]
where=src

[options.extras_require]
server =
    VMDIRAC ~=3.0.0

[options.entry_points]
console_scripts =
    dirac-ilcdms-get-file = ILCDIRAC.scripts:ilcdms_get_file
dirac =
    metadata = ILCDIRAC:extension_metadata
