[metadata]
name = LHCbDIRAC
version = attr: LHCbDIRAC.__version__
description = LHCbDIRAC is the LHCb extension of DIRAC
long_description = file: README.rst, CHANGELOG.rst
license = GPL-3.0-only
classifiers =
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
python_requires = >=3.8
package_dir=
    =src
packages = find:
install_requires =
    DIRAC ~=8.0.0
    uproot

[options.packages.find]
where=src

[options.extras_require]
server =
    LHCbWebDIRAC ~=5.0.0

[options.entry_points]
console_scripts =
    dirac-dms-get-file = LHCbDIRAC.scripts:dms_get_file
dirac =
    metadata = LHCbDIRAC:extension_metadata
