[metadata]
name = WebAppDIRAC
version = attr: WebAppDIRAC.__version__
description = DIRAC Web front-end application 
long_description = file: README.rst, CHANGELOG.rst
license = GPL-3.0-only
classifiers =
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
python_requires = >=3.8
package_dir=
    =src
packages = find:
install_requires =
    DIRAC ~=8.0.0
    tornado

[options.packages.find]
where=src

[options.extras_require]
server =

[options.entry_points]
dirac =
    metadata = WebAppDIRAC:extension_metadata
